Fix choices Z-index
Also add audio files, even though they're not working locally or in production

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,8 @@ input[type="number"] {
 	grid-area: choices;
 	padding: 1rem 1rem 0 0;
 	min-height: 15rem;
+	position: relative;
+    z-index: 1;
 }
 
 #choices-list {
